workloads/minio/overlays/flink-demo-rbac/ingressroute-patch.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio
  namespace: flink
spec:
  routes:
    - match: Host(`s3.flink-demo-rbac.confluentdemo.local`)
      kind: Rule
      services:
        - name: minio
          port: 9000
          scheme: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  namespace: flink
spec:
  routes:
    - match: Host(`s3-console.flink-demo-rbac.confluentdemo.local`)
      kind: Rule
      services:
        - name: minio
          port: 9001
          scheme: http
